syntax = "proto3";

import "google/protobuf/any.proto";

package proto;

message StandardResponse {
  int32 status = 1;
  string error = 2;
  google.protobuf.Any data = 3;
}

message StandardResponseWithString {
  int32 status = 1;
  string error = 2;
  string data = 3;
}